--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,8 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   message_generation
   std_srvs
+  tf
 )
-
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -206,6 +206,32 @@ add_dependencies(talker beginner_tutorials_generate_messages_cpp)
 add_executable(listener src/listener.cpp)
 target_link_libraries(listener ${catkin_LIBRARIES})
 add_dependencies(listener beginner_tutorials_generate_messages_cpp)
+
+
+if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+
+  add_rostest_gtest(
+  test_mynode
+  test/beginner_tutorial_test.launch
+  test/test_mynode.cpp
+  )
+  target_link_libraries(
+  test_mynode
+  ${catkin_LIBRARIES}
+  )
+  add_dependencies(
+  test_mynode
+  talker
+  ${PROJECT_NAME}_generate_messages_cpp
+  ${catkin_EXPORTED_TARGETS}
+  )
+endif()
+
+
+#find_package(rostest REQUIRED)
+#add_rostest_gtest(test_mynode test/beginner_tutorial_test.launch src/test/test_mynode.cpp)
+#target_link_libraries(test_mynode ${catkin_LIBRARIES})
 
 catkin_package(
   CATKIN_DEPENDS message_runtime
